# OneSentinel

./: Cargo.toml  PITCH_SCRIPT.md  README.md
rig-core/src/: one_or_many.rs
rig-core/src/loaders/: file.rs  pdf.rs
rig-core/src/providers/anthropic/: completion.rs
rig-core/src/vector_store/: in_memory_store.rs
rig-onechain-trader/: Cargo.toml  docker-compose.yml
rig-onechain-trader/src/: lib.rs  main.rs  state.rs  wallet.rs
rig-onechain-trader/src/agents/: data_ingestion.rs  execution.rs  mod.rs
rig-onechain-trader/src/database/: mod.rs  positions.rs  sync.rs
rig-onechain-trader/src/dex/: mod.rs
rig-onechain-trader/src/execution/: mod.rs
rig-onechain-trader/src/market_data/: birdeye.rs  mod.rs  storage.rs
rig-onechain-trader/src/personality/: mod.rs
rig-onechain-trader/src/strategy/: execution.rs  llm.rs  mod.rs  risk.rs  technical.rs
rig-onechain-trader/src/twitter/: mod.rs
rig-onechain-trader/tests/: test_onechain_engine.rs
src/database/: sync.rs
src/strategy/: mod.rs
